# Adversarial-Behavior-Protocol

./: .gitignore  ABP-Research-Paper-v2.0.docx  CITATION.cff  CODE_OF_CONDUCT.md  COLLABORATION-METHODOLOGY.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Contribution.md  Creative Commons Attribution 4.0 International License (CC BY 4.0)..txt  Implementaion guide.txt  LICENSE  PATENTS  README.md  README.md.md  ZENODO-DESCRIPTION.md  ZENODO-METADATA.json  mathematical_foundations.md  pyproject.toml  setup.py
Docs/: army_protocol_spec.md
data/: collapse_trajectories.csv  evolutionary_simulation.csv  expansion_samples.json  generate_samples.py  nash_equilibrium_sweep.csv  verification_trace.csv
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  CRITICAL-ANALYSIS.md  GLOSSARY.md  MATH-REFERENCE.md  ROADMAP.md
examples/: demo_all.py  demo_extended.py
experiments/: README.md
experiments/claude-sessions/: clades take on me and gems pitch ABP.txt  claudes take on luna.txt  clude helping me get ai deepsek colab.txt  recalling cluade.txt
experiments/deepseek-sessions/: deep seek.txt  deep seeks debate.txt  deepseek.txt
experiments/gemini-sessions/: ABP thoerys gemini.txt  The begining.txt  does geminis secret work.txt  gemini colaborative.txt  gems plan.txt
paper/: README.txt
scr/ABP/: memory.py  verify.py
src/abp/: __init__.py  army_protocol.py  bicameral.py  bubble_theory.py  cdq.py  entropy.py  expansion_metric.py  game_theory.py  garden_zoo.py  ikigai_filter.py  observer_protocol.py  (+4 more)
tests/: test_abp.py  test_extended.py
zenodo/: ZENODO-METADATA.json
(+25 files in other folders)
