[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adversarial-benevolence-protocol"
version = "2.0.0"
description = "Verifiable AI Alignment Through Computational Necessity"
readme = "README.md"
license = {text = "CC-BY-NC-4.0"}
authors = [
    {name = "Joshua Roger Joseph Just"},
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]
keywords = [
    "ai-safety",
    "alignment",
    "game-theory",
    "nash-equilibrium",
    "model-collapse",
    "verification",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
viz = [
    "matplotlib>=3.7",
]

[project.urls]
Repository = "https://github.com/jrjust/adversarial-benevolence-protocol"
Paper = "https://doi.org/10.5281/zenodo.18621138"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
